<resources>
    <string name="app_name">DailyHelper</string>
    <string name="background_image_description">Background image</string>
    <string name="welcome_string">Welcome!</string>
    <string name="login_text">Login</string>
    <string name="password_placeholder">Enter password…</string>
    <string name="banking_button_text">Banking</string>
    <string name="mental_button_text">Mental</string>
    <string name="joker_mode">Joker Mode</string>
    <string name="hq_mode">Harley Quinn Mode</string>
    <string name="back_button">Back</string>
    <string name="error">An error has occurred!</string>
    <string name="exit">Exit</string>

    #banking strings
    <string name="banking_string">Banking</string>
    <string name="banking_expenses_button">Expenses</string>
    <string name="banking_income_button">Income</string>
    <string name="banking_total">Total:  </string>
    <string name="banking_expenses">Expenses</string>
    <string name="banking_add_title">Name:</string>
    <string name="banking_add_amount">Amount:</string>
    <string name="banking_add_title_placeholder">"McDonald's"</string>
    <string name="banking_add_amount_placeholder">5,00</string>
    <string name="banking_add_data">Add</string>

    #expenses strings
    <string name="banking_expenses_add_pagetitle">Add Expense</string>
    <string name="banking_expense_add">Add an expense</string>
    <string name="expense_name_hint">"McDonald's"</string>
    <string name="expense_amount_hint">21.75</string>

    #income strings
    <string name="banking_income_add_pagetitle">Add Income</string>
    <string name="banking_income_add">Add an income</string>
    <string name="income_name_hint">Werk</string>
    <string name="income_amount_hint">403.75</string>

    #mental strings
    <string name="mental_string">Mental</string>
    <string name="mental_state">Mental State</string>
    <string name="mental_vent">Vent</string>

    #anime strings
    <string name="anime_string">Anime</string>
    <string name="anime_home">Home</string>
    <string name="anime_watching">Watching</string>
    <string name="anime_completed">Completed</string>
    <string name="anime_planning">Planning</string>
    <string name="anime_dropped">Dropped</string>
    <string name="manga_string">Manga</string>
    <string name="manga_reading">Reading</string>

    #books
    <string name="books_string">Books</string>
    <string name="comics_string">Comics</string>
    <string name="books_planning">Planning</string>
</resources>